ui/cap-react/src/antd/App/App.less
@import '~antd/dist/antd.less';

.__mainContent__{
  overflow-x: hidden;
}

.__mainLayout__ {
  height: 100vh !important;
  overflow-x: hidden;
  padding: 0 !important
}

.ant-layout-footer{
  padding: 0;
}

.ant-layout-header {
  height: fit-content;
}

.padding10{
  padding: 10px;
}


.rjsf{
  height: 100%;
}


.hoverPointer:hover{
  cursor: pointer;
}

